# beercalc

./: .angular-cli.json  .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  Trunk.toml  build.rs  build_and_deploy.sh  index.html  package.json  rust-toolchain.toml  tailwind.config.js  tailwind.css  tsconfig.json
.github/workflows/: main.yml
assets/css/: app.css
assets/i18n/: de.ftl  en.ftl  ru.ftl
e2e/: app.e2e-spec.ts
i18n/: de.ftl  en.ftl  ru.ftl
public/: 404.html  index.html  license.html
public/assets/css/: ebc.css  fonts.css
public/assets/i18n/: i18n.yaml
src/: i18n.js  i18n.ts  index.html  index.js  index.tsx  main.rs  styles.scss
src/action-types/: ActionTypes.ts
src/actions/: index.js  index.ts  types.js
src/app/: app.component.html  app.module.ts  calc.service.ts  storage.service.ts  translation.service.spec.ts  translation.service.ts
src/app/alcohol-calculator/: alcohol-calculator.component.html  alcohol-calculator.component.scss  alcohol-calculator.component.spec.ts  alcohol-calculator.component.ts
src/assets/: tailwind.css
src/assets/i18n/: i18n.yaml  lang.de.json  lang.en.json  lang.ru.json
src/common/: calculus.rs  color.rs  consts.rs  gravity.rs  lang.rs  mod.rs  route.rs  state.rs  theme.rs  translator.rs  util.rs  utils.rs
src/components/: alcohol.rs  alcohol_calc.rs  app.rs  brewhouse.rs  color.rs  color_conversion.rs  color_converter.rs  ebc.rs  ebc_calc.rs  footer.rs  gravity_picker.rs  header.rs  hops_adder.rs  ibu.rs  ibu_calc.rs  ibu_preset.rs  lang.rs  lang_picker.rs  mod.rs  not_found.rs  show_units.rs  theme.rs  unit_picker.rs
src/components/alcohol-calc/: AlcoholCalc.css  AlcoholCalc.js  AlcoholCalc.tsx  CalcStandard.js  CalcStandard.tsx  CalcTerrill.js  CalcTerrill.tsx  GravityPicker.js  GravityPicker.tsx  UnitPicker.js  UnitPicker.tsx  calculations.js
src/components/app/: App.js  App.tsx
src/components/brewhouse-calc/: BrewhouseCalc.js  BrewhouseCalc.tsx
src/components/color-calc/: ColorCalc.js  ColorCalc.tsx  ColorDisplay.js  ColorDisplay.tsx  EBC.css  MaltAdder.js  MaltAdder.tsx
src/components/footer/: Footer.js  Footer.tsx
src/components/ibu-calc/: HopsAdder.js  HopsAdder.tsx  IbuCalc.css  IbuCalc.js  IbuCalc.tsx  IbuPreset.js  IbuPreset.tsx
src/components/lang-picker/: LangPicker.js  LangPicker.tsx
src/i18n/: de.json  en.json  ru.json
src/reducers/: index.js  index.ts
src/types/: index.ts
(+10 files in other folders)
