[package]
name = "beercalc"
version = "0.0.0+git"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
yew = { version = "0.22.1", features = ["csr"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.91", features = [
    "Request",
    "RequestInit",
    "Response",
    "Window",
    "console",
    "Navigator",
    "Event",
    "EventTarget",
    "HtmlSelectElement",
    "MediaQueryList",
    "DomTokenList",
] }
yew-router = "0.19.0"
anyhow = "1.0.102"
serde = "1.0.228"
wasm-bindgen-futures = "0.4.64"
wasm-bindgen = "0.2.114"
js-sys = "0.3.91"
enum-iterator = "2.3.0"
yewdux = "0.12.0"
yaml-rust2 = "0.11.0"

[build-dependencies]
vergen-gitcl = "9.1.0"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
