[package]
name = "beercalc"
version = "0.0.0+git"
edition = "2021"
license = "MIT"
authors = ["Alex Ellwein <alex.ellwein@gmail.com>"]
build = "build.rs"

[dependencies]
dioxus = { version = "0.7.4", features = ["web", "router"] }
dioxus-i18n = "0.5.1"
dioxus-sdk-storage = "0.7.0"
serde = "1.0.228"
tracing = "0.1.44"
unic-langid = { version = "0.9.6", features = ["macros"] }
web-sys = { version = "0.3.94", features = [
    "Request",
    "RequestInit",
    "Response",
    "Window",
    "console",
    "Navigator",
    "Event",
    "EventTarget",
    "HtmlSelectElement",
    "MediaQueryList",
    "DomTokenList",
] }
anyhow = "1.0.102"


[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
debug = false
lto = true
incremental = false
